[metadata]
name = shipyard
version = 0.1.1
author = Brandur Thorgrimsson
author_email = brandur@atlantic-quantum.com
description = openQASM3 compiler developed by Atlantic Quantum
url = https://github.com/atlantic-quantum/Shipyard
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: Other/Proprietary License
    Operating System :: OS Independent
[options]
packages = find:
install_requires = 
    numpy
    scipy
    openpulse
    pydantic==2.5.3
    zhinst==23.10.3
    matplotlib
    pyyaml
    deprecated
python_requires = >=3.9,<3.12
include_package_data=True
[options.packages.find]
include = shipyard*
[pydeps]
exclude:
    numpy
    scipy
    openpulse
    pydantic
    zhinst
    matplotlib
    pyyaml
    openqasm3
    yaml
    shipyard.compiler_error
    shipyard.logger
    shipyard.utilities
    deprecated